<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ediertamayo.session2.Sesion2G1">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ediertamayo.session2.Sesion2G1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20sp"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/eCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/bGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/guardar"
            android:onClick="guardar"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasatiempos"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context="com.ediertamayo.session2.Sesion2G1">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cine"
                android:id="@+id/cCine"
                android:onClick="oncCheckBoxClicked"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nadar"
                android:id="@+id/cNadar"
                android:onClick="oncCheckBoxClicked"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gym"
                android:id="@+id/cGym"
                android:onClick="oncCheckBoxClicked"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>


    </LinearLayout>

</LinearLayout>
